# Vigilis

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  setup.py
app/: app.py
app/static/css/: style.css
app/templates/: index.html
artifacts/: labelled_logs.csv  test.csv
models/: model.pkl
notebooks/: experiment.ipynb  llm_experiment.ipynb
processors/: bert_processing.py  llm_processing.py  regex_processing.py
tests/: test_app.py  test_bert.py  test_llm.py
utils/: logger.py
