[project]
name = "vigilis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.10.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "from-root>=1.3.0",
    "groq>=1.0.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "prometheus-client>=0.23.1",
    "psutil>=7.2.1",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "uvicorn>=0.40.0",
]
