[project]
name = "vigilis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog",
    "dotenv",
    "fastapi",
    "from-root",
    "ipykernel",
    "ipywidgets",
    "jinja2",
    "google-generativeai",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-google-genai",
    "matplotlib",
    "pandas",
    "prometheus-client",
    "psutil",
    "pydantic",
    "python-multipart",
    "scikit-learn",
    "seaborn",
    "sentence-transformers",
    "uvicorn",
    "jsonpatch>=1.33",
]

[tool.hatch.build.targets.wheel]
packages = ["app", "models", "processors", "utils"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
